<resources>
  <string name="app_name">WeatherLens</string>
  <string name="sunset_icon">Sunset Icon</string>
  <string name="sunrise_icon">Sunrise Icon</string>
  <string name="home_icon">Home Icon</string>
  <string name="sunrise">Sunrise</string>
  <string name="home">Home</string>
  <string name="sunset">Sunset</string>
  <string name="global_error_message">Something went wrong.</string>
  <string name="loading">Loading…</string>
  <string name="wind">Wind</string>
  <string name="humidity">Humidity</string>
  <string name="max">Max</string>
  <string name="min">Min</string>
  <string name="weather">Weather</string>
  <string name="ooops">Ooops…</string>
  <string name="you_have_no_internet_connection">You have no internet connection.</string>
  <string name="retry">Retry</string>
  <string name="your_location_is_turned_off">Your location is turned off.</string>
  <string name="denied_location_permission">You have denied the location permission.</string>
  <string name="location_permission">Location Permission</string>
  <string name="location_permission_rationale_text">Location is needed to retrieve information about weather forcast.</string>
  <string name="camera_permission_rationale_text">Camera permission is needed to capture a photo.</string>
  <string name="proceed">Proceed</string>
  <string name="go_to_settings">Please go to settings to\ngrant the permission.</string>
  <string name="title_weatherlens">WeatherLens</string>
  <string name="title_weatherlens_home">WeatherLens - Home</string>
  <string name="title_weatherlens_sunise">WeatherLens - Sunrise</string>
  <string name="title_weatherlens_sunset">WeatherLens - Sunset</string>
  <string name="capture_sunrise">Capture sunrise</string>
  <string name="camera_permission">Camera permission</string>
  <string name="capture">Capture</string>
  <string name="capture_sunset">Capture sunset</string>
</resources>