<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:background="@color/background"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <com.google.android.material.divider.MaterialDivider
    android:id="@+id/navigationDivider"
    android:layout_marginStart="12dp"
    android:layout_marginEnd="12dp"
    android:layout_width="0dp"
    android:layout_height="2dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:dividerColor="#78AE80" />

  <LinearLayout
    android:id="@+id/buttonSunrise"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginVertical="12dp"
    android:layout_marginStart="32dp"
    android:gravity="center"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toBottomOf="@id/navigationDivider">

    <ImageView
      android:layout_width="50dp"
      android:layout_height="50dp"
      android:scaleType="centerCrop"
      android:src="@drawable/ic_sunrise"
      android:contentDescription="@string/sunrise_icon" />

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/sunrise" />
  </LinearLayout>


  <LinearLayout
    android:id="@+id/buttonHome"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginBottom="8dp"
    android:layout_marginVertical="12dp"
    android:layout_marginStart="4dp"
    android:gravity="center"
    app:layout_constraintStart_toEndOf="@id/buttonSunrise"
    app:layout_constraintEnd_toStartOf="@id/buttonSunset"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toBottomOf="@id/navigationDivider">

    <ImageView
      android:layout_width="50dp"
      android:layout_height="50dp"
      android:scaleType="centerCrop"
      android:src="@drawable/ic_home"
      android:contentDescription="@string/home_icon" />

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/home" />
  </LinearLayout>


  <LinearLayout
    android:id="@+id/buttonSunset"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginVertical="12dp"
    android:layout_marginEnd="32dp"
    android:gravity="center"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toBottomOf="@id/navigationDivider">

    <ImageView
      android:layout_width="50dp"
      android:layout_height="50dp"
      android:scaleType="centerCrop"
      android:src="@drawable/ic_sunset"
      android:contentDescription="@string/sunset_icon" />

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/sunset" />
  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>