<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:orientation="vertical">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="2dp">

    <androidx.cardview.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:cardCornerRadius="5dp"
      android:layout_margin="8dp">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="4dp">

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:padding="4dp"
          android:gravity="center_vertical">

          <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_location"
            android:layout_margin="2dp" />

          <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="8dp"
            android:gravity="end">

            <TextView
              android:id="@+id/tv_location_city"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              tools:text="Name"
              android:textStyle="bold"
              android:textSize="16sp"
              android:padding="2dp"
              android:gravity="end" />

            <TextView
              android:id="@+id/tv_location"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              tools:text="country"
              android:padding="2dp"
              android:gravity="end" />
          </LinearLayout>
        </LinearLayout>

      </LinearLayout>

    </androidx.cardview.widget.CardView>


  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="2"
    android:padding="2dp">

    <androidx.cardview.widget.CardView
      android:layout_width="0dp"
      android:layout_weight="1"
      android:layout_height="wrap_content"
      app:cardCornerRadius="5dp"
      android:layout_margin="8dp">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp"
        android:gravity="center_vertical">

        <ImageView
          android:layout_width="40dp"
          android:layout_height="40dp"
          android:src="@drawable/ic_wind"
          android:layout_margin="2dp" />

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:layout_marginTop="2dp"
          android:layout_marginBottom="2dp"
          android:layout_marginStart="2dp"
          android:layout_marginEnd="8dp"
          android:gravity="end">

          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wind"
            android:textStyle="bold"
            android:textSize="16sp"
            android:padding="2dp"
            android:gravity="end" />

          <TextView
            android:id="@+id/tv_wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="miles per hour"
            android:padding="2dp"
            android:gravity="end" />
        </LinearLayout>
      </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
      android:layout_width="0dp"
      android:layout_weight="1"
      android:layout_height="wrap_content"
      app:cardCornerRadius="5dp"
      android:layout_margin="8dp">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp"
        android:gravity="center_vertical">

        <ImageView
          android:layout_width="40dp"
          android:layout_height="40dp"
          android:src="@drawable/ic_humidity"
          android:layout_margin="2dp" />

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:layout_marginTop="2dp"
          android:layout_marginBottom="2dp"
          android:layout_marginStart="2dp"
          android:layout_marginEnd="8dp"
          android:gravity="end">

          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity"
            android:textStyle="bold"
            android:textSize="16sp"
            android:padding="2dp"
            android:gravity="end" />

          <TextView
            android:id="@+id/tv_humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Percent"
            android:padding="2dp"
            android:gravity="end" />
        </LinearLayout>
      </LinearLayout>

    </androidx.cardview.widget.CardView>

  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="2"
    android:padding="2dp">

    <androidx.cardview.widget.CardView
      android:layout_width="0dp"
      android:layout_weight="1"
      android:layout_height="wrap_content"
      app:cardCornerRadius="5dp"
      android:layout_margin="8dp">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp"
        android:gravity="center_vertical">

        <ImageView
          android:layout_width="40dp"
          android:layout_height="40dp"
          android:src="@drawable/max_temperature"
          android:layout_margin="2dp" />

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:layout_marginTop="2dp"
          android:layout_marginBottom="2dp"
          android:layout_marginStart="2dp"
          android:layout_marginEnd="8dp"
          android:gravity="end">

          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max"
            android:textStyle="bold"
            android:textSize="16sp"
            android:padding="2dp"
            android:gravity="end" />

          <TextView
            android:id="@+id/tv_temperature_max"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="20*"
            android:padding="2dp"
            android:gravity="end"
            android:textSize="16sp" />
        </LinearLayout>


      </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
      android:layout_width="0dp"
      android:layout_weight="1"
      android:layout_height="wrap_content"
      app:cardCornerRadius="5dp"
      android:layout_margin="8dp">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp"
        android:gravity="center_vertical">

        <ImageView
          android:layout_width="40dp"
          android:layout_height="40dp"
          android:src="@drawable/min_temperature"
          android:layout_margin="2dp" />

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:layout_marginTop="2dp"
          android:layout_marginBottom="2dp"
          android:layout_marginStart="2dp"
          android:layout_marginEnd="8dp"
          android:gravity="end">

          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/min"
            android:textStyle="bold"
            android:textSize="16sp"
            android:padding="2dp"
            android:gravity="end" />

          <TextView
            android:id="@+id/tv_temperature_min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="1*"
            android:textSize="16sp"
            android:padding="2dp"
            android:gravity="end" />
        </LinearLayout>
      </LinearLayout>
    </androidx.cardview.widget.CardView>
  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="2dp">

    <androidx.cardview.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:cardCornerRadius="5dp"
      android:layout_margin="8dp">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="4dp">

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:padding="4dp"
          android:gravity="center_vertical">

          <ImageView
            android:id="@+id/iv_weather"
            android:layout_width="40dp"
            android:layout_height="40dp"
            tools:src="@drawable/ic_snowflake"
            android:layout_margin="2dp" />

          <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="8dp"
            android:gravity="end">


            <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/weather"
              android:textStyle="bold"
              android:textSize="16sp"
              android:padding="2dp"
              android:gravity="end" />

            <TextView
              android:id="@+id/tv_weather"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              tools:text="condition"
              android:padding="2dp"
              android:gravity="end" />
          </LinearLayout>
        </LinearLayout>

      </LinearLayout>

    </androidx.cardview.widget.CardView>

  </LinearLayout>

</LinearLayout>